derive/tests/ui/multiple-rpc-attributes.stderr
error: Expected only a single rpc attribute per method
  --> $DIR/multiple-rpc-attributes.rs:7:2
   |
7  |       /// Returns a protocol version
   |  _____^
8  | |     #[rpc(name = "protocolVersion")]
9  | |     #[rpc(name = "protocolVersionAgain")]
10 | |     fn protocol_version(&self) -> Result<String>;
   | |_________________________________________________^
